fix: updates accordingto the TS

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -7,7 +7,7 @@
     <title>shelter</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="../../assets/icons/favicon.ico">
-    <script type="module" src="script.js" defer></script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -58,7 +58,7 @@
             <section class="about">
                 <div class="wrapper">
                     <div class="about__container">
-                        <img src="../../assets/images/about-pets.png" alt="About-pets" class="about__img" width="300px">
+                        <img src="../../assets/images/about-pets.png" alt="About-pets" class="about__img" width="300">
                         <div class="about__content">
                             <h2 class="section-title">About the shelter<br>“Cozy House”</h2>
                             <p class="text text_justified text-dark">
@@ -147,39 +147,39 @@
                         <h2 class="section-title section-title_center">How you can help<br>our shelter</h2>
                         <div class="help__list">
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-pet-food.svg" alt="Pet food" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-pet-food.svg" alt="Pet food" class="help-item__img" width="60">
                                 <h4>Pet food</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-transportation.svg" alt="Transportation" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-transportation.svg" alt="Transportation" class="help-item__img" width="60">
                                 <h4>Transportation</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-toys.svg" alt="Toys" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-toys.svg" alt="Toys" class="help-item__img" width="60">
                                 <h4>Toys</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-bowls-and-cups.svg" alt="Bowls and cups" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-bowls-and-cups.svg" alt="Bowls and cups" class="help-item__img" width="60">
                                 <h4>Bowls and cups</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-shampoos.svg" alt="Shampoos" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-shampoos.svg" alt="Shampoos" class="help-item__img" width="60">
                                 <h4>Shampoos</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-vitamins.svg" alt="Vitamins" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-vitamins.svg" alt="Vitamins" class="help-item__img" width="60">
                                 <h4>Vitamins</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-medicines.svg" alt="Medicines" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-medicines.svg" alt="Medicines" class="help-item__img" width="60">
                                 <h4>Medicines</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-collars-leashes.svg" alt="Collars / leashes" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-collars-leashes.svg" alt="Collars / leashes" class="help-item__img" width="60">
                                 <h4>Collars / leashes</h4>
                             </div>
                             <div class="help-item">
-                                <img src="../../assets/icons/how-you-can-help/icon-sleeping-area.svg" alt="Sleeping areas" class="help-item__img" width="60px">
+                                <img src="../../assets/icons/how-you-can-help/icon-sleeping-area.svg" alt="Sleeping areas" class="help-item__img" width="60">
                                 <h4>Sleeping areas</h4>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                         <div class="donation__content">
                             <h2 class="section-title">You can also<br>make a donation</h2>
                             <h5>Name of the bank / Type of bank account</h5>
-                            <a href="javascript:void(0)" class="card-input-link"><input type="tel" inputmode="numeric" pattern="\d*" autocomplete="cc-number" maxlength="24" placeholder="8380 2880 8028 8791 7435" class="card-input"></a>
+                            <a href="javascript:void(0)" class="card-input-link"><button class="card-input">8380 2880 8028 8791 7435</button></a> <!-- <input type="tel" inputmode="numeric" pattern="\d*" maxlength="24" placeholder="8380 2880 8028 8791 7435" class="card-input"> -->
                             <p class="footnote">
                                 Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                             </p>
@@ -209,13 +209,13 @@
                         <h2 class="section-title footer__section-title">For questions and suggestions</h2>
                         <a href="mailto:email@shelter.com">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32">
                                 email@shelter.com
                             </div>
                         </a>
                         <a href="tel:+136745677554">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32">
                                 +13 674 567 75 54
                             </div>
                         </a>  
@@ -224,18 +224,18 @@
                         <h2 class="section-title footer__section-title">We are waiting for your visit</h2>
                         <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32">
                                 1 Central Street, Boston<br>(entrance from the store)
                             </div>
                         </a>
                         <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32">
                                 18 South Park, London
                             </div>
                         </a>
                     </div>
-                    <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300px">
+                    <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300">
                 </div>
             </div>
         </footer>
