--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -7,7 +7,7 @@
     <title>shelter</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="../../assets/icons/favicon.ico">
-    <script type="module" src="script.js" defer></script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -119,7 +119,7 @@
                         <div class="controllers">
                             <button class="button button-round button-bordered button_inactive button_first-page">&lt;&lt;</button>
                             <button class="button button-round button-bordered button_inactive button_prev-page">&lt;</button>
-                            <button class="button button-round button_active current-page">1</button>
+                            <button class="button button-round button_active button_non-hover current-page">1</button>
                             <button class="button button-round button-bordered button_next-page">&gt;</button>
                             <button class="button button-round button-bordered button_last-page">&gt;&gt;</button> <!--Maybe &#10142;-->  
                         </div>
@@ -147,6 +147,7 @@
                         </div>
                         <button class="button button-round button-bordered modal__close-button">&#10006;</button>
                     </div>
+                </div>
             </section>
         </main>
         <footer class="footer" id="footer">
@@ -156,13 +157,13 @@
                         <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
                         <a href="mailto:email@shelter.com">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32">
                                 email@shelter.com
                             </div>
                         </a>    
                         <a href="tel:+136745677554">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32">
                                 +13 674 567 75 54
                             </div>
                         </a>  
@@ -171,18 +172,18 @@
                         <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
                         <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32">
                                 1 Central Street, Boston<br>(entrance from the store)
                             </div>
                         </a>
                         <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                             <div class="footer-item">
-                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32">
                                 18 South Park, London
                             </div>
                         </a>
                     </div>
-                    <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300px">
+                    <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300">
                 </div>
             </div>
         </footer>
