feat: add corrections for cross-check

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -25,7 +25,7 @@
                         <ul class="nav__list">
                             <li class="nav__item nav__item_dark"><a href="../main/index.html" class="nav__link">About the shelter</a></li>
                             <li class="nav__item nav__item_dark nav__item_dark_active"><a href="#" class="nav__link">Our pets</a></li>
-                            <li class="nav__item nav__item_dark"><a href="../main/#donation" class="nav__link">Help the shelter</a></li>
+                            <li class="nav__item nav__item_dark"><a href="../main/#help" class="nav__link">Help the shelter</a></li>
                             <li class="nav__item nav__item_dark"><a href="#footer" class="nav__link">Contacts</a></li>
                         </ul>
                     </nav>
