--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -25,7 +25,7 @@
                             <ul class="nav__list">
                                 <li class="nav__item nav__item_light nav__item_light_active"><a href="#" class="nav__link">About the shelter</a></li>
                                 <li class="nav__item nav__item_light"><a href="../pets/index.html" class="nav__link">Our pets</a></li>
-                                <li class="nav__item nav__item_light"><a href="#donation" class="nav__link">Help the shelter</a></li>
+                                <li class="nav__item nav__item_light"><a href="#help" class="nav__link">Help the shelter</a></li>
                                 <li class="nav__item nav__item_light"><a href="#footer" class="nav__link">Contacts</a></li>
                             </ul>
                         </nav>
@@ -143,7 +143,7 @@
             </section>
             <section class="help">
                 <div class="wrapper">
-                    <div class="help__container">
+                    <div class="help__container" id="help">
                         <h2 class="section-title section-title_center">How you can help<br>our shelter</h2>
                         <div class="help__list">
                             <div class="help-item">
