feat: corrections according to Part2 TS

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -45,9 +45,11 @@
                             <p class="text text-light">
                                 We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                             </p>
-                            <a href="#our-friens" class="start-screen__link">
-                                <button class="button button-oval button-colored start-screen__button">Make a friend</button>
-                            </a> 
+                            <div class="start-screen__button-container">
+                                <a href="#our-friens" class="start-screen__link">
+                                    <button class="button button-oval button-colored start-screen__button">Make a friend</button>
+                                </a> 
+                            </div>
                         </div>
                         <img src="../../assets/images/start-screen-puppy.png" alt="Start screen puppy" class="start-screen__img" height="100%">
                     </div>
@@ -228,7 +230,7 @@
                                 1 Central Street, Boston<br>(entrance from the store)
                             </div>
                         </a>
-                        <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                        <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank" class="footer__adress-link">
                             <div class="footer-item">
                                 <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32">
                                 18 South Park, London
