--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -154,7 +154,7 @@
             <div class="wrapper">
                 <div class="footer__container">
                     <div class="footer__content footer__content_contacts">
-                        <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
+                        <h2 class="section-title footer__section-title">For questions and suggestions</h2>
                         <a href="mailto:email@shelter.com">
                             <div class="footer-item">
                                 <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32">
@@ -169,14 +169,14 @@
                         </a>  
                     </div>
                     <div class="footer__content footer__content_address">
-                        <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
+                        <h2 class="section-title footer__section-title">We are waiting for your visit</h2>
                         <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
                             <div class="footer-item">
                                 <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32">
                                 1 Central Street, Boston<br>(entrance from the store)
                             </div>
                         </a>
-                        <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                        <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank" class="footer__adress-link">
                             <div class="footer-item">
                                 <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32">
                                 18 South Park, London
