feat: update part 3 according to TS

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -79,32 +79,34 @@
                         <h2 class="section-title section-title_center">Our friends who<br>are looking for a house</h2>
                         <div class="carousel">
                             <button class="button button-round button-bordered button_prev tablet_hidden">&#129044;</button>
-                            <div class="pets">
-                                <div class="pet">
-                                    <div class="pet__cover">
-                                        <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
+                            <div class="pets-wrapper">
+                                <div class="pets">
+                                    <div class="pet">
+                                        <div class="pet__cover">
+                                            <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
+                                        </div>
+                                        <div class="pet__content">
+                                            <h3>Katrine</h3>
+                                            <button class="button button-oval button-bordered">Learn more</button>
+                                        </div>
                                     </div>
-                                    <div class="pet__content">
-                                        <h3>Katrine</h3>
-                                        <button class="button button-oval button-bordered">Learn more</button>
+                                    <div class="pet tablet_hidden">
+                                        <div class="pet__cover">
+                                            <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="pet__img">
+                                        </div>
+                                        <div class="pet__content">
+                                            <h3>Jennifer</h3>
+                                            <button class="button button-oval button-bordered">Learn more</button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="pet tablet_hidden">
-                                    <div class="pet__cover">
-                                        <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="pet__img">
-                                    </div>
-                                    <div class="pet__content">
-                                        <h3>Jennifer</h3>
-                                        <button class="button button-oval button-bordered">Learn more</button>
-                                    </div>
-                                </div>
-                                <div class="pet desktop_hidden">
-                                    <div class="pet__cover">
-                                        <img src="../../assets/images/our-friends/pets-woody.png" alt="Woody" class="pet__img">
-                                    </div>
-                                    <div class="pet__content">
-                                        <h3>Woody</h3>
-                                        <button class="button button-oval button-bordered">Learn more</button>
+                                    <div class="pet desktop_hidden">
+                                        <div class="pet__cover">
+                                            <img src="../../assets/images/our-friends/pets-woody.png" alt="Woody" class="pet__img">
+                                        </div>
+                                        <div class="pet__content">
+                                            <h3>Woody</h3>
+                                            <button class="button button-oval button-bordered">Learn more</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
