--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -22,7 +22,7 @@
                         </div>
                     </a>
                     <nav class="nav">
-                        <ul class="nav__list">
+                        <ul class="nav__list nav__list_our-pets-page">
                             <li class="nav__item nav__item_dark"><a href="../main/index.html" class="nav__link">About the shelter</a></li>
                             <li class="nav__item nav__item_dark nav__item_dark_active"><a href="#" class="nav__link">Our pets</a></li>
                             <li class="nav__item nav__item_dark"><a href="../main/#help" class="nav__link">Help the shelter</a></li>
