feat: update footer with github name and course logo

--- a/migration-newip-to-ts/src/index.html
+++ b/migration-newip-to-ts/src/index.html
@@ -17,6 +17,8 @@
         <footer>
             <p class="copyright">
                 Copyright <a href="https://newsapi.org">NewsAPI</a>
+                <a href="https://github.com/onskulit">Github</a>
+                <a href="https://rs.school/"><img src="./assets/logo-rsschool3.png" alt="RSSchool-logo" height="100px"></a>
             </p>
         </footer>
 
