feat: update footer

--- a/migration-newip-to-ts/src/index.html
+++ b/migration-newip-to-ts/src/index.html
@@ -17,9 +17,9 @@
         <footer>
             <p class="copyright">
                 Copyright <a href="https://newsapi.org">NewsAPI</a>
-                <a href="https://github.com/onskulit">Github</a>
-                <a href="https://rs.school/"><img src="./assets/logo-rsschool3.png" alt="RSSchool-logo" height="100px"></a>
             </p>
+            <a href="https://github.com/onskulit">Github</a>
+            <a href="https://rs.school/"><img src="https://rs.school/images/rs_school_js.svg" alt="RSSchool-logo" height="25px"></a>
         </footer>
 
         <template id="sourceItemTemp">
@@ -48,6 +48,5 @@
             </div>
         </template>
 
-        <script src="./index.js"></script>
     </body>
 </html>
